[gd_scene load_steps=12 format=3 uid="uid://tw7k06bbbxk2"]

[ext_resource type="Script" uid="uid://ccreh7jfjl5dy" path="res://scripts/UI/SubAddScientistToBuilding.gd" id="1_ryox7"]
[ext_resource type="Texture2D" uid="uid://cewsw8vxclwog" path="res://assets/UI/tilesetT3.png" id="2_v7gxl"]
[ext_resource type="Texture2D" uid="uid://bwpqmipypl4c0" path="res://assets/UI/tilesetT3_pressed.png" id="3_4kioe"]
[ext_resource type="Texture2D" uid="uid://itfh1debj6h" path="res://assets/UI/tilesetT3_hovered.png" id="4_jupd2"]
[ext_resource type="AudioStream" uid="uid://mcjpq3q11dvh" path="res://assets/sounds/cancel-36118.mp3" id="5_okx5y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dhqeg"]
atlas = ExtResource("2_v7gxl")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wluu2"]
atlas = ExtResource("3_4kioe")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktwyy"]
atlas = ExtResource("4_jupd2")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcub3"]
atlas = ExtResource("2_v7gxl")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ws4"]
atlas = ExtResource("3_4kioe")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6tne"]
atlas = ExtResource("4_jupd2")
region = Rect2(256, 128, 64, 64)

[node name="SubMenuAddScientistToBuilding" type="MarginContainer"]
custom_minimum_size = Vector2(290, 100)
offset_right = 250.0
offset_bottom = 75.0
script = ExtResource("1_ryox7")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 3

[node name="nine" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_v7gxl")
region_rect = Rect2(320, 448, 63, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/nine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -32.0
offset_right = 147.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/nine/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="nom" type="Label" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "nom"
autowrap_mode = 2

[node name="nombreScient" type="Label" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "0/0"
horizontal_alignment = 2
autowrap_mode = 2

[node name="desassignation" type="TextureButton" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_direction = 3
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_dhqeg")
texture_pressed = SubResource("AtlasTexture_wluu2")
texture_hover = SubResource("AtlasTexture_ktwyy")
ignore_texture_size = true
stretch_mode = 0

[node name="assignation" type="TextureButton" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_direction = 3
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_bcub3")
texture_pressed = SubResource("AtlasTexture_t6ws4")
texture_hover = SubResource("AtlasTexture_y6tne")
ignore_texture_size = true
stretch_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MarginContainer/nine/MarginContainer/HBoxContainer/assignation"]
stream = ExtResource("5_okx5y")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/nine/MarginContainer/HBoxContainer/desassignation" to="." method="_on_desassignation_pressed"]
[connection signal="pressed" from="MarginContainer/nine/MarginContainer/HBoxContainer/assignation" to="." method="_on_assignation_pressed"]
